@@ -1,5 +1,3 @@
-#include <stdio.h>
-
 #include "stepcmd.h"
 
 #include "../breakpoint.h"
@@ -9,15 +7,16 @@
 
 #include "../disas/branch.h"
 
-
-// XXX
-#include "../exception.h"
 static void prepare(int kind){
     int need_ss = 1;
 
     struct machthread *focused = get_focused_thread();
+
+    /* Disable breakpoints before we start stepping so we don't have
+     * to deal with more exceptions. If the user happens to step on
+     * a breakpoint, report it as normal.
+     */
     breakpoint_disable_all_except(BP_COND_STEPPING);
-    //breakpoint_disable_all();
 
     if(kind == INST_STEP_INTO)
         focused->stepconfig.step_kind = INST_STEP_INTO;
@@ -25,29 +24,23 @@ static void prepare(int kind){
         focused->stepconfig.step_kind = INST_STEP_OVER;
 
         unsigned int opcode = 0;
-        
-        read_memory_at_location((void *)focused->thread_state.__pc,
-                &opcode, sizeof(opcode));
 
         struct breakpoint *b = find_bp_with_cond(focused->thread_state.__pc,
                 BP_COND_NORMAL);
 
         if(b)
             opcode = b->old_instruction;
+        else{
+            read_memory_at_location((void *)focused->thread_state.__pc,
+                    &opcode, sizeof(opcode));
+        }
 
-        printf("%s: opcode %#x\n", __func__, opcode);
-
-        SS_BP_LOCK;
         struct branchinfo info = {0};
         int branch = is_branch(opcode, &info);
 
         if(branch && info.is_subroutine_call){
             if(info.rn != X30){
                 if(!focused->stepconfig.set_temp_ss_breakpoint){
-                    printf("%s: at a subroutine call, will set bp on LR,"
-                            " which will be PC+4 aka %#llx, now: LR = %#llx PC = %#llx\n",
-                            __func__, focused->thread_state.__pc + 4,
-                            focused->thread_state.__lr, focused->thread_state.__pc);
                     __uint64_t future_lr = focused->thread_state.__pc + 4;
                     set_stepping_breakpoint(future_lr, focused->ID);
                     focused->stepconfig.set_temp_ss_breakpoint = 1;
@@ -66,8 +59,6 @@ static void prepare(int kind){
 
         focused->stepconfig.is_stepping = 1;
     }
-
-    SS_BP_UNLOCK;
 }
 
 enum cmd_error_t cmdfunc_step_inst_into(struct cmd_args_t *args, 
