@@ -88,9 +88,6 @@ static struct machthread *machthread_new(mach_port_t thread_port,
     mt->last_hit_bkpt_ID = 0;
     mt->stepconfig.is_stepping = 0;
     mt->stepconfig.step_kind = STEP_NONE;
-    mt->stepconfig.keep_stepping = 0;
-    mt->stepconfig.LR_to_step_to = -1;
-    mt->stepconfig.need_to_save_LR = 0;
     mt->stepconfig.just_hit_ss_breakpoint = 0;
     mt->stepconfig.set_temp_ss_breakpoint = 0;
 
@@ -410,9 +407,6 @@ void update_thread_list(thread_act_port_array_t threads,
         int last_hit_bkpt_ID;
         int is_stepping;
         int step_kind;
-        int keep_stepping;
-        unsigned long LR_to_step_to;
-        int need_to_save_LR;
         int just_hit_ss_breakpoint;
         int set_temp_ss_breakpoint;
     };
@@ -442,9 +436,6 @@ void update_thread_list(thread_act_port_array_t threads,
         info->last_hit_bkpt_ID = t->last_hit_bkpt_ID;
         info->is_stepping = t->stepconfig.is_stepping;
         info->step_kind = t->stepconfig.step_kind;
-        info->keep_stepping = t->stepconfig.keep_stepping;
-        info->LR_to_step_to = t->stepconfig.LR_to_step_to;
-        info->need_to_save_LR = t->stepconfig.need_to_save_LR;
         info->just_hit_ss_breakpoint = t->stepconfig.just_hit_ss_breakpoint;
         info->set_temp_ss_breakpoint = t->stepconfig.set_temp_ss_breakpoint;
 
@@ -472,9 +463,6 @@ void update_thread_list(thread_act_port_array_t threads,
                     add->last_hit_bkpt_ID = infos[j]->last_hit_bkpt_ID;
                     add->stepconfig.is_stepping = infos[j]->is_stepping;
                     add->stepconfig.step_kind = infos[j]->step_kind;
-                    add->stepconfig.keep_stepping = infos[j]->keep_stepping;
-                    add->stepconfig.LR_to_step_to = infos[j]->LR_to_step_to;
-                    add->stepconfig.need_to_save_LR = infos[j]->need_to_save_LR;
                     add->stepconfig.just_hit_ss_breakpoint = infos[j]->just_hit_ss_breakpoint;
                     add->stepconfig.set_temp_ss_breakpoint = infos[j]->set_temp_ss_breakpoint;
 
