@@ -76,9 +76,6 @@ struct machthread {
     struct {
         int is_stepping;
         int step_kind;
-        int keep_stepping;
-        unsigned long LR_to_step_to;
-        int need_to_save_LR;
         int just_hit_ss_breakpoint;
         int set_temp_ss_breakpoint;
     } stepconfig;
